--- a/sections/fast-exposition.jade
+++ b/sections/fast-exposition.jade
@@ -6,13 +6,12 @@ html
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/css/index.css')
 
-    script(type='text/javascript', src='/js/vendor/reveal.min.js')
-    script(type='text/javascript', src="/js/vendor/reveal-head.min.js")
-    script(type='text/javascript', src='/js/vendor/jquery.js')
-    script(type='text/javascript', src='/js/vendor/bootstrap.min.js')
-    script(type='text/javascript', src='/js/vendor/lodash.min.js')
-    script(type='text/javascript', src='/js/vendor/jquery.js')
-    script(type='text/javascript', src='/js/vendor/collapse.js')
+    script(type='text/javascript', src='/js/reveal.min.js')
+    script(type='text/javascript', src="/js/reveal-head.min.js")
+    script(type='text/javascript', src='/js/jquery.js')
+    script(type='text/javascript', src='/js/bootstrap.min.js')
+    script(type='text/javascript', src='/js/lodash.min.js')
+    script(type='text/javascript', src='/js/collapse.js')
 
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
