--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -4,11 +4,11 @@ html
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/css/c3.css')
-    script(type='text/javascript', src='/js/vendor/jquery.js')
-    script(type='text/javascript', src='/js/vendor/collapse.js')
-    script(type='text/javascript', src='/js/vendor/d3.min.js')
-    script(type='text/javascript', src='/js/vendor/c3.min.js')
-    script(type='text/javascript', src='/js/vendor/lodash.min.js')
+    script(type='text/javascript', src='/js/jquery.js')
+    script(type='text/javascript', src='/js/collapse.js')
+    script(type='text/javascript', src='/js/d3.min.js')
+    script(type='text/javascript', src='/js/c3.min.js')
+    script(type='text/javascript', src='/js/lodash.min.js')
     script(type='text/javascript', src='/js/local/impact.js')
     title ઉ Impact
 
