--- a/sections/realitymeter.jade
+++ b/sections/realitymeter.jade
@@ -5,10 +5,10 @@ html
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/js/local/realitymeter.css')
     link(href='/js/local/EB+Garamond-Font.css', rel='stylesheet')
-    script(type='text/javascript', src='/js/vendor/jquery.js')
-    script(type='text/javascript', src='/js/vendor/moment.min.js')
-    script(type='text/javascript', src='/js/vendor/d3.min.js')
-    script(type='text/javascript', src='/js/vendor/lodash.min.js')
+    script(type='text/javascript', src='/js/jquery.js')
+    script(type='text/javascript', src='/js/moment.min.js')
+    script(type='text/javascript', src='/js/d3.min.js')
+    script(type='text/javascript', src='/js/lodash.min.js')
     script(type='text/javascript', src='/js/local/realitymeter.js')
     title ઉ RealityMeter
 
