--- a/sections/index.jade
+++ b/sections/index.jade
@@ -11,6 +11,8 @@ html
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     meta(name="keywords" content="facebook tracking exposed")
+    meta(property="og:url" content="https://facebook.tracking.exposed")
+    meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo.svg")
     title facebook tracking exposed
 
   body
