--- a/sections/useit.jade
+++ b/sections/useit.jade
@@ -6,7 +6,7 @@ block useit
     |, soon we'll provide the Firefox version.
 
   p With the collected data, that represent a publicly accessible knowledge you can download every week, we offer some basic visualisation intended to give awarness and critical judgement to the supporters:
-    ul
+    ul.fb--icon-list
       li Insight on your own timeline
       li Insight in promotional content you are exposed
       li Analytics and insight over the general behavior of the connected society
