kind of error that happen when you change the DOM in the browser only

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -160,7 +160,7 @@ p
 
 /* unordered list */
 .fb--icon-list
-  list-style-type url("/images/fbtrex16.png")
+  list-style-image url("/images/fbtrex16.png")
 
 
 
