don't left our page when install the extension, pls

--- a/sections/useit.jade
+++ b/sections/useit.jade
@@ -2,7 +2,7 @@ block useit
   h2 Use It!
 
   p Install the 
-    a(href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") chrome extension
+    a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") chrome extension
     |, soon we'll provide the Firefox version.
 
   p With the collected data, that represent a publicly accessible knowledge you can download every week, we offer some basic visualisation intended to give awarness and critical judgement to the supporters:
