fixed a stylish issue

--- a/sections/alpha.jade
+++ b/sections/alpha.jade
@@ -5,10 +5,10 @@ block alpha
   ul.fb--icon-list
     li A team has been created, partnership are explored, along a refined vision for the project
     li Privacy issues has been discussed and, a Privacy model has been defined and specified 
-    li new technologies will mode facebook.tracking.exposed in a more sustainable ecosystem, check the
+    li new technologies will mode facebook.tracking.exposed in a more sustainable ecosystem, check the 
       a(href="/beta") Beta announcement
       |.
-    li We have a 
+    li ← This, is our new 
       a(href="https://github.com/tracking-exposed/logos") logo
       |!
     li We broke the previous visualisation, they will be restored and new will comes.
