added Privacy Statement 1.0

--- a/sections/alpha.jade
+++ b/sections/alpha.jade
@@ -4,7 +4,9 @@ block alpha
   p The initial development phase went since June 2016 to September, then the alpha stage last since the begin of September to the begin of December. The goal of the alpha was showing the project, get person engaged, understand assets, concerns and priorities. It went fairly well:
   ul.fb--icon-list
     li A team has been created, partnership are explored, along a refined vision for the project
-    li Privacy issues has been discussed and, a Privacy model has been defined and specified 
+    li Privacy issues has been discussed and, a 
+      a(href="/privacy-statement") Privacy Statement
+      |  has been defined and specified 
     li new technologies will mode facebook.tracking.exposed in a more sustainable ecosystem, check the 
       a(href="/beta") Beta announcement
       |.
