--- a/sections/beta.jade
+++ b/sections/beta.jade
@@ -36,6 +36,8 @@ html
             li
               a(href='https://github.com/tracking-exposed/facebook') Code
             li
+              a(href='/privacy-statement') Privacy Statement
+            li
               a(href='/#team') About us
 
   div.polite-propaganda
@@ -53,7 +55,7 @@ html
     p only what is shared with the public [
       img(src="/images/public.png")
       | ] is considered by the experiment, see the 
-      a(href="/privacy-model") complete, completely readable simple terms
+      a(href="/privacy-statement") Privacy Statement.
 
     h2 Parsing happen server side
     p once the HTML snippet is collected, multiple small tasks extract the meaning from it If you want, for example, implement an image analysis on public posts, you can do it. If you follow some rules, you can extend the public database with your results, so others can operate on top of it and extend visualisation. 
