--- a/sections/privacyStatement.jade
+++ b/sections/privacyStatement.jade
@@ -33,7 +33,9 @@ html
       h1 Privacy Statement
       smaller 9 December 2016, version 1.0
       h2  1. What is Facebook Tracking Exposed?
-      p Facebook Tracking Exposed, or fb.tr.ex, is two things: a web browser addon that collects the stories visible in your Facebook Newsfeed, and a website that aggregates that data from all the users who have the addon installed. Everything we do is open source so you can see how it works and help make it better.
+      p Facebook Tracking Exposed, or fb.tr.ex, is two things: a web browser addon that collects the stories visible in your Facebook Newsfeed, and a website that aggregates that data from all the users who have the addon installed. Everything we do is 
+        a(href="https://github.com/tracking-exposed/" target="_blank") open source
+        |  so you can see how it works and help make it better.
 
       h2  2. Why is this important?
       p As a society, we are getting more and more of our information about the world from social media, especially from Facebook. Facebook users get a selection of the status updates, photos, and links shared by their Facebook friends. But how does Facebook decide what to show us in our Newsfeed? What stories are emphasized and what stories are hidden? Facebook’s Newsfeed algorithm lives in shadows.
@@ -48,16 +50,22 @@ html
           | To take part in fb.tr.ex, you have to opt in by installing the web browser addon. We make it very clear that you are taking part, and we make you jump through some extra hoops to make sure you understand what you are signing up for.
         li
           b Public posts 
-          | Fb.tr.ex only collects posts that are flagged as “Public” on Facebook, meaning anyone in the world could view these posts, even if they do not have a Facebook account. “Public” posts are explained on the Facebook help site. 
+          | Fb.tr.ex only collects posts that are flagged as “Public” on Facebook, meaning anyone in the world could view these posts, even if they do not have a Facebook account. “Public” posts are explained on the 
+          a(href="https://www.facebook.com/help/203805466323736?helpref=search" target="_blank") Facebook help site
+          |. 
         li
           b Opt-out 
-          | According to the Facebook Statement of Rights and Responsibilities, when you post something as Public, you are allowing anyone to use it - including us. If you want to opt out of fb.tr.ex entirely, you can do so by making sure none of your posts are set to Public.
+          | According to the 
+          a(href="https://www.facebook.com/terms" target="_blank") Facebook Statement of Rights and Responsibilities
+          |, when you post something as Public, you are allowing anyone to use it - including us. If you want to opt out of fb.tr.ex entirely, you can do so by making sure none of your posts are set to Public.
 
       h2  4. What information do we collect?
       p If you install fb.tr.ex, we collect:
       ul.fb--icon-list
         li Your Facebook user ID;
-        li Your IP address each time you refresh your Newsfeed;
+        li The 
+          a(href="https://en.wikipedia.org/wiki/Geolocation_software" target="_blank") (deducted) Nation
+          |  based on your IP address, each time you refresh your Newsfeed;
         li The date and time each time you refresh your Newsfeed;
         li The date and time of the impression of every post on your Newsfeed;
         li The position of every post in your Newsfeed; and
