escape and comments weirdness

--- a/sections/beta.jade
+++ b/sections/beta.jade
@@ -34,7 +34,7 @@ html
             li
               a(href='/impact') Open Stats
             li
-              a(href='https://github.com/tracking-exposed/facebook') Code
+              a(href='https:// github.com/tracking-exposed/facebook') Code
             li
               a(href='/privacy-statement') Privacy Statement
             li
@@ -46,7 +46,7 @@ html
 
     h2 Native extension for chrome
     p you can 
-      a(href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") install clicking here
+      a(href="https:// chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") install clicking here
       |, a FireFox extension will be available soon.
 
     smaller the extension will extract metadata (to get us insight on facebook algorithm) and data ( to enable user to understand the effect, and enable researcher in analyzing how information spread online). 
@@ -59,7 +59,7 @@ html
 
     h2 Parsing happen server side
     p once the HTML snippet is collected, multiple small tasks extract the meaning from it If you want, for example, implement an image analysis on public posts, you can do it. If you follow some rules, you can extend the public database with your results, so others can operate on top of it and extend visualisation. 
-      a(href="https://github.com/tracking-exposed/facebook/API.md#parsers") check the specifics
+      a(href="https:// github.com/tracking-exposed/facebook/API.md#parsers") check the specifics
       | .
 
     h2 If you used the Alpha version
@@ -73,44 +73,44 @@ html
 
     div.footer 
 
-    // 9 December 2016, the day to kill alpha
-    // 
-    //root@tracko:~# mongo
-    //MongoDB shell version: 2.6.10
-    //connecting to: test
-    //> use facebook
-    //switched to db facebook
-    //> db.supporters
-    //db.supporters   db.supporters2  db.supporters3
-    //> db.supporters2.count()
-    //28
-    //> db.supporters2.drop()
-    //true
-    //> db.supporters.count()
-    //2237
-    //> db.supporters.drop()
-    //true
-    //> db.supporters3.count()
-    //95
-    //> db.supporters3.drop()
-    //true
-    //> db.timeline
-    //db.timeline2  db.timeline3
-    //> db.timeline2.count()
-    //27828
-    //> db.timeline2.drop()
-    //true
-    //> db.timeline3.count()
-    //315941
-    //> db.timeline3.drop()
-    //true
-    //> db.refreshes
-    //db.refreshes2  db.refreshes3
-    //> db.refreshes2.count()
-    //1996
-    //> db.refreshes2.drop()
-    //true
-    //> db.refreshes3.count()
-    //21262
-    //> db.refreshes3.drop()
-    //true
+    //  9 December 2016, the day to kill alpha
+    //  
+    // root@tracko:~# mongo
+    // MongoDB shell version: 2.6.10
+    // connecting to: test
+    // ≻ use facebook
+    // switched to db facebook
+    // ≻ db.supporters
+    // db.supporters   db.supporters2  db.supporters3
+    // ≻ db.supporters2.count()
+    // 28
+    // ≻ db.supporters2.drop()
+    // true
+    // ≻ db.supporters.count()
+    // 2237
+    // ≻ db.supporters.drop()
+    // true
+    // ≻ db.supporters3.count()
+    // 95
+    // ≻ db.supporters3.drop()
+    // true
+    // ≻ db.timeline
+    // db.timeline2  db.timeline3
+    // ≻ db.timeline2.count()
+    // 27828
+    // ≻ db.timeline2.drop()
+    // true
+    // ≻ db.timeline3.count()
+    // 315941
+    // ≻ db.timeline3.drop()
+    // true
+    // ≻ db.refreshes
+    // db.refreshes2  db.refreshes3
+    // ≻ db.refreshes2.count()
+    // 1996
+    // ≻ db.refreshes2.drop()
+    // true
+    // ≻ db.refreshes3.count()
+    // 21262
+    // ≻ db.refreshes3.drop()
+    // true
