--- a/sections/team/ost.jade
+++ b/sections/team/ost.jade
@@ -5,7 +5,7 @@ block osd
       p(class="team-name") OpenSensorData
       p(class="team-role") Advisor
       p(class="team-twitter") Company reference 
-        a(href="https://twitter.com/osd_it" target="blank") @ost_id
+        a(href="https://twitter.com/osd_it" target="blank") @ost_it
       p(class="team-twitter")
         a(href="https://twitter.com/raimondian" target="blank") Andrea Raimondi
       p(class="team-twitter")
