fixed typos in maintenance page

--- a/sections/realitycheck/landing.jade
+++ b/sections/realitycheck/landing.jade
@@ -8,9 +8,9 @@ html
 
   body
     div(style="margin: 6%")
-      h1 Visualisation temporarly unavailable
+      h1 Visualisation temporarily unavailable
       p Sorry for that, as part of the transition between 
         a(href="/beta") alpha and beta
-        |, your data are collected and would be display to you soon, because the old visualsiation are still to be updated accordingly the new data format.
+        |, your data are being collected and will be displayed to you soon, because the old visualisations are still to be updated according to the new data format.
 
       img(src="/images/fbtrex_logo.svg")
