stats restructuring work in progress #37

--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -12,7 +12,7 @@ html
     script(type='text/javascript', src='/js/local/impact.js')
     title ઉ Impact
 
-  body(onload="displayTimeAdoption('#timeAdoption'); displayCountryPie('#countrypie'); displayPostType('#postType');")
+  body(onload="displayTimeAdoption('#timeAdoption'); displayCountryPie('#countrypie');")
   
   .container-fluid
     .jumbotron
@@ -45,13 +45,6 @@ html
 
   .container-fluid
     div(id="timeAdoption")
-
-  .container-fluid
-    .simpletext
-      h2 Number of posts, by type
-
-  .container-fluid
-    div(id="postType")
 
   .container-fluid
     .simpletext
