--- a/sections/index.jade
+++ b/sections/index.jade
@@ -19,30 +19,7 @@ html
 
     include header
 
-    nav.navbar.navbar-default
-      div.container
-        div.navbar-header
-          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
-            span(id="sr-only") Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-
-        div.collapse.navbar-collapse(id="thenavbar")
-          ul.nav.navbar-nav
-            li
-              a(href='#vision') What
-            li
-              a(href='#useit') Use It 
-            li
-              a(href='#alpha') The Experience done
-            li
-              a(href='#team') About Us
-            li
-              a(href='/impact') Stats
-            li
-              a(href='/talks/') Talks
-
+    include navbar
 
     div#vision
       div.polite-propaganda
