--- a/sections/privacyStatement.jade
+++ b/sections/privacyStatement.jade
@@ -11,22 +11,7 @@ html
   body
     include header
 
-    nav.navbar.navbar-default
-      div.container
-        div.navbar-header
-          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded
-="false")
-            span(id="sr-only") Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-
-        div.collapse.navbar-collapse(id="thenavbar")
-          ul.nav.navbar-nav
-            li
-              a(href='/') Home
-            li
-              a(href='/talks/') Talks
+    include navbar
 
 
     div.propaganda
