moved team in 'About Us' tab

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -152,11 +152,15 @@ p
 .team-github
   font-size 0.9em
 
+.teamblock
+  font-size 0.7em
+  margin-top 1em
+
 /* team members */
 .img-circle
-    border-radius 50%
-    margin 0 50%
-    transform translate(-50%,0%)
+  border-radius 50%
+  margin 0 50%
+  transform translate(-50%,0%)
 
 /* unordered list */
 .fb--icon-list
