--- a/sections/privacyStatement.jade
+++ b/sections/privacyStatement.jade
@@ -6,13 +6,12 @@ html
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title background thoughts on facebook.tracking.exposed
+    title Privacy Statement
 
   body
     include header
 
     include navbar
-
 
     div.propaganda
       h1 Privacy Statement
