addressed #39 for homepage

--- a/sections/index.jade
+++ b/sections/index.jade
@@ -11,8 +11,12 @@ html
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     meta(name="keywords" content="facebook tracking exposed")
+    meta(property="og:title" content="facebook.tracking.exposed")
+    meta(property="og:type" content="website")
+    meta(property="og:description" content="Facebook Tracking Exposed is a web browser addon that collects the stories visible in your Facebook News feed and a website that aggregates that data from all the users who have the addon installed. Our vision is to increase transparency behind personalization algorithms")
     meta(property="og:url" content="https://facebook.tracking.exposed")
     meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo.svg")
+    meta(property="og:image:type" content="image/svg+xml")
     title facebook tracking exposed
 
   body
