--- a/sections/talks/netzpolitischer054.jade
+++ b/sections/talks/netzpolitischer054.jade
@@ -6,10 +6,10 @@ html
     link(rel='stylesheet', href='/js/local/slides.css')
     link(rel='stylesheet', href='/css/reveal-solarized.css')
     link(href='/js/local/EB+Garamond-Font.css', rel='stylesheet')
-    script(type='text/javascript', src='/js/vendor/reveal.min.js')
-    script(type='text/javascript', src="/js/vendor/reveal-head.min.js")
-    script(type='text/javascript', src='/js/vendor/jquery.js')
-    script(type='text/javascript', src='/js/vendor/bootstrap.min.js')
+    script(type='text/javascript', src='/js/reveal.min.js')
+    script(type='text/javascript', src="/js/reveal-head.min.js")
+    script(type='text/javascript', src='/js/jquery.js')
+    script(type='text/javascript', src='/js/bootstrap.min.js')
 
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
