completed the access update, fixed bugs

--- a/sections/header.jade
+++ b/sections/header.jade
@@ -3,7 +3,7 @@ block header
   div.container-fluid
     span.col-xs-2.center
       img(src="/images/fbtrex_logo.svg")
-    span.col-xs-8
+    span.col-xs-8.center
       p.big
         span.blue facebook
         |.
