--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -14,20 +14,16 @@ html
 
   body(onload="byDay('impressions', '#goldmine'); byDay('metadata', '#metadata'); byDay('users', '#users'); displayCountryPie('#countrypie');")
   
-  .container-fluid
-    .jumbotron
-      h1 Impact, adoption and open stats
-
+  include header
   include navbar
 
   .container-fluid
     .simpletext
       h2 Adoption statistics
       p Since the mid of December 2016, facebook.tracking.exposed is in ß release. below some graph of the data collected. As part of the stable delivery, we'll define how third party can download the dataset and how we might integrate third party analysis in our APIs.
-      p We know to be in a slippery terrain: in one side, enabling users to assess Personalisation Algorithm is our goal, in the other, we value Privacy and Identiy rights much more than the corporations we criticize, therefore, 
-        a(href="https://responsibledata.io/social-media-intelligence-the-wayward-child-of-open-source-intelligence/") aware of the risks posed by social media intelligence
+      p We know to be in a slippery terrain: in one side, enabling users to assess Personalisation Algorithm is our goal, in the other, we value Privacy and Identiy rights much more than the corporations we criticize. 
+        a(href="https://responsibledata.io/social-media-intelligence-the-wayward-child-of-open-source-intelligence/") Aware of the risks posed by social media intelligence
         |, we aim to enable users awareness, but prevent abuses.
-      p Simple breakdown: #{users} unique users provided #{posts} posts in #{timelines} timelines.
 
   .container-fluid
     .simpletext
@@ -36,13 +32,13 @@ html
 
   .container-fluid
     .simpletext
-      h2 Users interaction: active, not coming back and visitors
+      h2 Users and Supporters
     div(id="users")
 
-  .container-fluid
-    .simpletext
-      h2 Parsed medadata statistics
-    div(id="metadata")
+  // .container-fluid
+  //   .simpletext
+  //     h2 Medadata available
+  //   div(id="metadata")
 
   .container-fluid
     .simpletext
