--- a/sections/navbar.jade
+++ b/sections/navbar.jade
@@ -20,6 +20,6 @@ block navbar
             li
               a(href='/impact') Stats
             li
-              a(href='/talks/') Talks
+              a(href='/talks/') Initiatives
             li
               a(href='/about') About Us
