--- a/sections/useit.jade
+++ b/sections/useit.jade
@@ -5,14 +5,15 @@ block useit
     a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") chrome extension
     |, soon we'll provide the Firefox version.
 
-  p With the collected data, that represent a publicly accessible knowledge you can download every week, we offer some basic visualisation intended to give awarness and critical judgement to the supporters:
+  p The collected data represent a publicly accessible knowledge you can download every week. We offer some basic visualisation intended to give awarness and critical judgement to the supporters:
     ul.fb--icon-list
-      li Insight on your own timeline
-      li Insight in promotional content you are exposed
-      li Analytics and insight over the general behavior of the connected society
-      li analysis on how Personalisation Algorithm affects your reality perception
-
-
+      li Insight on your own timeline (this is one of 
+        a(href="/realitycheck/100014305273231") mine
+        |)
+      li Insight about the promotional content you are exposed
+      li Analytics over the general behavior of the connected society
+      li Analysis on how Personalisation Algorithm affects your reality perception
+      li An Open API, so if you want create your own visualisation, you're welcome
 
 
 
