--- a/sections/vision.jade
+++ b/sections/vision.jade
@@ -2,5 +2,5 @@ block vision
 
   div.left
     p Our 
-      span.garamond vision 
+      span.italic vision 
       span is to increase transparency behind personalization algorithms, so that people can have more effective control of their online Facebook experience and more awareness of the information to which they are exposed. 
