--- a/sections/beta.jade
+++ b/sections/beta.jade
@@ -17,32 +17,11 @@ html
   body
  
     include header
-
-    nav.navbar.navbar-default
-      div.container
-        div.navbar-header
-          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
-            span(id="sr-only") Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-
-        div.collapse.navbar-collapse(id="thenavbar")
-          ul.nav.navbar-nav
-            li
-              a(href='/') home
-            li
-              a(href='/impact') Open Stats
-            li
-              a(href='https://github.com/tracking-exposed/facebook') Code
-            li
-              a(href='/privacy-statement') Privacy Statement
-            li
-              a(href='/#team') About us
+    include navbar
 
   div.polite-propaganda
     p
-      i In December 2016, we are releasing the beta version of facebook.tracking.exposed, with these shiny improvements:
+      i In December 2016, we have entered the beta phase of facebook.tracking.exposed, these the shiny improvements:
 
     h2 Native extension for chrome
     p you can 
@@ -59,7 +38,7 @@ html
 
     h2 Parsing happen server side
     p once the HTML snippet is collected, multiple small tasks extract the meaning from it If you want, for example, implement an image analysis on public posts, you can do it. If you follow some rules, you can extend the public database with your results, so others can operate on top of it and extend visualisation. 
-      a(href="https://github.com/tracking-exposed/facebook/API.md#parsers") check the specifics
+      a(href="https://github.com/tracking-exposed/facebook/tree/master/parsers") check the specifics
       | .
 
     h2 If you used the Alpha version
@@ -73,7 +52,7 @@ html
 
     div.footer 
 
-    //  9 December 2016, the day to kill alpha
+    //  9 December 2016, the day alpha got kill'd
     //  
     // root@tracko:~# mongo
     // MongoDB shell version: 2.6.10
