--- a/styles/index.styl
+++ b/styles/index.styl
@@ -4,10 +4,6 @@
   padding 0
   box-sizing border-box
 
-.garamond
-  font-family 'EB Garamond', serif
-  margin 0
-
 .left
   text-align left
 
@@ -51,7 +47,6 @@ p
 .polite-propaganda
   padding-right 10% 
   padding-left 10%
-  padding-bottom 2%
 
   h2
     border-left #3b5999 0.01em solid
@@ -113,13 +108,13 @@ p
   color white
 
 .blue
-  color 3c5a99
+  color #3c5a99
 
 .orange
-  color fd5308
+  color #fd5308
 
 .green
-  color 66b032
+  color #66b032
 
 .italic
   font-style italic
