--- a/sections/header.jade
+++ b/sections/header.jade
@@ -10,6 +10,10 @@ block header
         span.orange tracking
         |.
         span.green exposed
+      p.italic ß release, still 
+        a(href="https://github.com/tracking-exposed/web-extension") work i
+        a(href="https://github.com/tracking-exposed/facebook") n progress
+        | ⚡
     span.col-xs-2.center
       img(src="/images/fbtrex_logo.svg")
 
