--- a/sections/index.jade
+++ b/sections/index.jade
@@ -15,8 +15,7 @@ html
     meta(property="og:type" content="website")
     meta(property="og:description" content="Facebook Tracking Exposed is a web browser addon that collects the stories visible in your Facebook News feed and a website that aggregates that data from all the users who have the addon installed. Our vision is to increase transparency behind personalization algorithms")
     meta(property="og:url" content="https://facebook.tracking.exposed")
-    meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo.svg")
-    meta(property="og:image:type" content="image/svg+xml")
+    meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-1000x1000.png")
     title facebook tracking exposed
 
   body
