some other last minute fixes

--- a/sections/realitycheck/landing.jade
+++ b/sections/realitycheck/landing.jade
@@ -29,6 +29,8 @@ html
                 b accessible only by the supporter
                 |, access can be shared upon owner decisions.
 
+        // debug: #{timelines} #{distance} #{lastActivity} #{userId}
+
         div.realitycontainer
             table#listTable.display(cellspacing='0', width='100%')
                 thead
