trying open graph improvement, fail mobile fluid resize

--- a/sections/header.jade
+++ b/sections/header.jade
@@ -1,19 +1,20 @@
 block header
   
   div.container-fluid
-    span.col-xs-2.center
-      img(src="/images/fbtrex_logo.svg")
-    span.col-xs-8.center
-      p.big
-        span.blue facebook
-        |.
-        span.orange tracking
-        |.
-        span.green exposed
-      p.italic ß release, still 
-        a(href="https://github.com/tracking-exposed/web-extension") work i
-        a(href="https://github.com/tracking-exposed/facebook") n progress
-        | ⚡
-    span.col-xs-2.center
-      img(src="/images/fbtrex_logo.svg")
+    div.row-fluid
+      span.col-xs-2.center
+        img(src="/images/fbtrex_logo.svg")
+      span.col-xs-8.center
+        p.big
+          span.blue facebook
+          |.
+          span.orange tracking
+          |.
+          span.green exposed
+        p.italic ß release, still 
+          a(href="https://github.com/tracking-exposed/web-extension") work i
+          a(href="https://github.com/tracking-exposed/facebook") n progress
+          | ⚡
+      span.col-xs-2.center
+        img(src="/images/fbtrex_logo.svg")
 
