--- a/sections/index.jade
+++ b/sections/index.jade
@@ -16,12 +16,13 @@ html
     meta(property="og:description" content="Facebook Tracking Exposed is a web browser addon that collects the stories visible in your Facebook News feed and a website that aggregates that data from all the users who have the addon installed. Our vision is to increase transparency behind personalization algorithms")
     meta(property="og:url" content="https://facebook.tracking.exposed")
     meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
+    meta(property="og:image:width" content="400")
+    meta(property="og:image:height" content="400")
     title facebook tracking exposed
 
   body
 
     include header
-
     include navbar
 
     div#vision
